manifests-successful/app-config-frontend-1.1.1.tgz-manifest.yaml
---
# Source: app-config-frontend/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-app-config-frontend
  labels:
    helm.sh/chart: app-config-frontend-1.1.1
    app.kubernetes.io/name: app-config-frontend
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: app-config-frontend-1.1.1
      app.kubernetes.io/name: app-config-frontend
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/version: "0.5.0"
      app.kubernetes.io/managed-by: Helm
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'app-config-frontend-1.1.1.tgz'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
---
# Source: app-config-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-app-config-frontend
  labels:
    helm.sh/chart: app-config-frontend-1.1.1
    app.kubernetes.io/name: app-config-frontend
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app-config-frontend
    app.kubernetes.io/instance: my-release
---
# Source: app-config-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-app-config-frontend
  labels:
    helm.sh/chart: app-config-frontend-1.1.1
    app.kubernetes.io/name: app-config-frontend
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-config-frontend
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-config-frontend
        app.kubernetes.io/instance: my-release
    spec:
      securityContext:
        {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - app-config-frontend
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - my-release
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: app-config-frontend
          securityContext:
            {}
          image: "radarbase/radar-app-config-frontend:0.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /appconfig/
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /appconfig/
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: app-config-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-app-config-frontend
  labels:
    helm.sh/chart: app-config-frontend-1.1.1
    app.kubernetes.io/name: app-config-frontend
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "localhost"
      secretName: radar-base-tls-appconfig-frontend
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/appconfig"
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-release-app-config-frontend
                port:
                  number: 8080
---
# Source: app-config-frontend/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-app-config-frontend-test-connection"
  labels:
    helm.sh/chart: app-config-frontend-1.1.1
    app.kubernetes.io/name: app-config-frontend
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-app-config-frontend:8080']
  restartPolicy: Never
